<resources>
    <string name="app_name">Quản lý thu chi cá nhân - IUH</string>
    <string name="title_diary_nav">Nhật ký</string>
    <string name="title_source_money_nav">Nguồn tiền</string>
    <string name="title_plan_nav">Kế hoạch</string>
    <string name="title_report_nav">Báo cáo</string>
    <string name="title_more_nav">Khác</string>
    <string name="title_add_money_source">Thêm nguồn tiền</string>
    <string name="title_add_plan_activity">Thêm kế hoạch</string>
    <string name="title_transfer_activity">Chuyển khoản</string>
    <string name="loading">Loading…</string>
    <string name="facebook_app_id">1790505444345652</string>
    <string name="fb_login_protocol_scheme">fb1790505444345652</string>
    <string name="login_with_google">Đăng nhập với Google</string>
    <string name="login_with_facebook">Đăng nhập với Facebook</string>

    <string-array name="diary_filter">
        <item>Hôm nay</item>
        <item>Tháng này</item>
        <item>Tất cả</item>
    </string-array>

    <string-array name="needed_level">
        <item>Cần thiết</item>
        <item>Không cần thiết lắm</item>
        <item>Không có cũng không sao</item>
    </string-array>

    <string-array name="expense_category">
        <item>Ăn uống</item>
        <item>Dịch vụ sinh hoạt</item>
        <item>Đi lại</item>
        <item>Phát triển bản thân</item>
        <item>Nhà cửa</item>
        <item>Trang phục</item>
        <item>Hưởng thụ</item>
        <item>Hiếu hỉ</item>
        <item>Sức khỏe</item>
        <item>Con cái</item>
        <item>Khác</item>
    </string-array>

    <string-array name="income_category">
        <item>Lương</item>
        <item>Thưởng</item>
        <item>Được cho/tặng</item>
        <item>Khác</item>
    </string-array>

    <string name="remove_ms_title">Xóa nguồn tiền</string>
    <string name="remove_ms_message">Lưu ý:\nNếu xóa tài khoản này, các nhật ký ghi chép liên quan sẽ bị xóa.\nBạn chắc chắn muốn xóa?</string>
    <string name="remove_ms_cancel">Hủy bỏ</string>
    <string name="remove_ms_remove">Vẫn xóa</string>

    <string name="warning_remove_ms_title">Không thể xóa</string>
    <string name="warning_remove_ms_message">Xin lỗi vì sự bất tiện này.\nVí và tiết kiệm là nguồn tiền mặc định.\nBạn không thể xóa!</string>
    <string name="warning_remove_ms_cancel">Ok</string>
    <string name="warning_remove_ms_remove">Vẫn xóa</string>

    <string name="remove_plan_title">Xóa kế hoạch: %s</string>
    <string name="remove_diary_title">Xóa nhật ký này</string>
    <string name="remove_message">Bạn chắc chắn muốn xóa?</string>
    <string name="remove_plan_cancel">Hủy bỏ</string>
    <string name="remove_plan_remove">Đồng ý</string>

    <string name="warning_add_saving_plan_title">Kế hoạch hiện tại chưa hoàn thành</string>
    <string name="warning_add_saving_plan_message">Bạn đang có một kế hoạch chưa hoàn thành.\nBạn không thể thêm kế hoạch mới.</string>
    <string name="warning_add_saving_plan_cancel">Ok</string>

    <string name="notify_plan_done_title">Kế hoạch hoàn thành!</string>
    <string name="notify_plan_done_message">Số dư trong khoản tiền kiệm đã đủ cho kế hoạch:\n%s.</string>
    <string name="notify_plan_done_cancel">Ok</string>

    <string name="hide_balance_str">********đ</string>

    <string name="income_type">Thu</string>
    <string name="expense_type">Chi</string>

    <string name="menu_remove">Xóa</string>
    <string name="menu_transfer">Chuyển khoản</string>

    <string name="menu_add_diary">Thêm vào nhật ký</string>

    <string name="menu_show_diary_list">Xem lại nhật ký</string>
    <string name="menu_details">Phân tích chi tiêu</string>

    <string name="wallet_money_source">Ví</string>
    <string name="saving_money_source">Tiết kiệm</string>

    <string name="done">hoàn thành</string>
</resources>
