<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_diary"
        android:icon="@drawable/ic_nav_diary_24dp"
        android:title="@string/title_diary_nav" />
    <item
        android:id="@+id/nav_source_money"
        android:icon="@drawable/ic_nav_source_money_24dp"
        android:title="@string/title_source_money_nav" />
    <item
        android:id="@+id/nav_plan"
        android:icon="@drawable/ic_nav_plan_24dp"
        android:title="@string/title_plan_nav" />
    <item
        android:id="@+id/nav_report"
        android:icon="@drawable/ic_nav_report_24dp"
        android:title="@string/title_report_nav" />
    <item
        android:id="@+id/nav_more"
        android:icon="@drawable/ic_nav_more_24dp"
        android:title="@string/title_more_nav" />

</menu>
